--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -27,10 +27,10 @@
 					<li><a href="home">Home <span class="glyphicon glyphicon-home"></a></li>
 					<li><a href="download">Download <span class="glyphicon glyphicon-cloud-download"></a></li>
 					<li><a href="tutorial">Tutorial <span class="glyphicon glyphicon-book"></a></li>
-					<li><a href="api">API doc <span class="glyphicon glyphicon-info-sign"></a></li>
 					<li><a href="authors">Authors <span class="glyphicon glyphicon-user"></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
+					<li><a href="api">API doc <span class="glyphicon glyphicon-info-sign"></a></li>
 					<li><a href="https://github.com/omp4j/omp4j" target="_blank">Source <span class="glyphicon glyphicon-cloud"></a></li>
 					<li><a href="demo">Demo <span class="glyphicon glyphicon-cloud-upload"></span></a></li>
 				</ul>
@@ -42,7 +42,44 @@
 	<div role="main" class="container">
 		<div data-ng-view></div>
 	</div>
-	
+
+	<hr/>
+	<footer class="footer">
+		<div class="container text-muted">
+			<div class="row">
+				<div class="col-md-4 text-left">
+					<h3>Contact</h3>
+					<hr/>
+					<ul class="list-unstyled">
+						<li><strong>Petr Bělohlávek</strong></li>
+						<li><a href="mailto:omp4j [at] petrbel.cz" target="_blank">omp4j [at] petrbel.cz</a> </li>
+						<li><a href="http://www.petrbel.cz" target="_blank">www.petrbel.cz</a></li>
+						<li><a href="https://github.com/omp4j/omp4j/issues" target="_blank">Issue tracker</a></li>
+
+					</ul>
+				</div>
+				<div class="col-md-4 text-center">
+					<h3>Copyright</h3>
+					<hr/>
+					&copy; Petr Bělohlávek, 2015
+				</div>
+				<div class="col-md-4 text-right">
+					<h3>Navigation</h3>
+					<hr/>
+					<ul class="list-unstyled">
+						<li><a href="home">Home <span class="glyphicon glyphicon-home"></a></li>
+						<li><a href="download">Download <span class="glyphicon glyphicon-cloud-download"></a></li>
+						<li><a href="tutorial">Tutorial <span class="glyphicon glyphicon-book"></a></li>
+						<li><a href="api">API doc <span class="glyphicon glyphicon-info-sign"></a></li>
+						<li><a href="authors">Authors <span class="glyphicon glyphicon-user"></a></li>
+						<li><a href="https://github.com/omp4j/omp4j" target="_blank">Source <span class="glyphicon glyphicon-cloud"></a></li>
+						<li><a href="demo">Demo <span class="glyphicon glyphicon-cloud-upload"></span></a></li>
+
+					</ul>
+				</div>
+		</div>
+	</footer>
+
 	<script src="@routes.Assets.at("third/jquery/jquery-1.10.2.min.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("third/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("third/angularjs/angular.min.js")" type="text/javascript"></script>
